Removed position: fixed styling because the sticky header was causing awkward overlaps with the play button

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     background-color: black;
-    position: fixed;
+    
   
     .logo-container {
       display: flex;
